syntax = "proto3";

package pb;

option go_package = "github.com/richardjaytea/infipic/pb";

import "google/protobuf/empty.proto";

/******************** GLOBAL MESSAGES  **********************/

message Client {
  string id = 1;
  string roomKey = 2;
}

/******************** AUTH SERVICE  **********************/
service Auth {
  rpc Authenticate(AuthRequest) returns (Client) {}
}

message AuthRequest {
  string name = 1;
  string roomKey = 2;
}

/******************** CHAT SERVICE  **********************/

service Chat {
  rpc GetMessages(MessageStreamRequest) returns (stream MessageResponse) {}
  rpc SendMessage(MessageRequest) returns (google.protobuf.Empty) {}
}

message MessageStreamRequest {
  string id = 1;
  string roomKey = 2;
  string name = 3;
}

message MessageRequest {
  string id = 1;
  string roomKey = 2;
  string content = 3;
}

message MessageResponse {
  string name = 1;
  string content = 2;
  string timestamp = 3;
}

/******************** IMAGE SERVICE  **********************/

service Image {
  rpc GetImage(Client) returns (stream ImageResponse) {}
  rpc GetWords(Room) returns (stream WordResponse) {}
  rpc GetCountdown(Room) returns (stream CountdownResponse) {}
}

message Room {
  string key = 1;
}

message ImageResponse {
  string content = 1;
}

message WordResponse {
  repeated string words = 1;
}

message CountdownResponse {
  int32 time = 1;
}